<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Forms -->
    <string name="app_name" translatable="false">Messenger</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>

    <!-- Warnings -->
    <string name="email_address_is_incorrect">Email address is incorrect</string>
    <string name="password_is_too_short">Password is too short (required min. 6 chars)</string>
    <string name="username_is_required">Username is required</string>
    <string name="passwords_are_different">Passwords are different</string>

    <!-- Progress dialogs text -->
    <string name="loading">Loading...</string>
    <string name="loging">Is logging in...</string>
    <string name="registering">User is registering...</string>
    <string name="sync_process">Process of data synchronization...</string>
    <string name="loading_of_messages">Loading of messages...</string>

    <string name="uploading">Uploading...</string>

    <!-- Settings and other elements -->
    <string name="profile_management">Profile management</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out_successfully">Signed out successfully</string>
    <string name="find_friends">Find friends</string>
    <string name="main_profile">Main profile</string>
    <string name="friends_list">Friends list</string>
    <string name="choose_new_avatar">Choose new avatar</string>
    <string name="create_conversation">Create conversation</string>

</resources>
