<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/user"
            android:title="@string/find_friends" />

        <item
            android:id="@+id/nav_create_conversation"
            android:icon="@drawable/ic_email_white_18dp"
            android:title="@string/create_conversation" />
    </group>

    <item android:title="@string/profile_management">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
