<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/activity_sign_up_username_field"
        style="@style/InputTheme"
        android:layout_above="@+id/activity_sign_up_email_field"
        android:layout_alignEnd="@+id/activity_sign_up_email_field"
        android:layout_alignStart="@+id/activity_sign_up_email_field"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/activity_sign_up_email_field"
        style="@style/InputTheme"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:layout_above="@+id/activity_sign_up_password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp" />

    <EditText
        android:id="@+id/activity_sign_up_password_field"
        style="@style/InputTheme"
        android:layout_alignStart="@+id/activity_sign_up_email_field"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/activity_sign_up_repeat_password_field"
        style="@style/InputTheme"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:layout_below="@+id/activity_sign_up_password_field"
        android:layout_alignStart="@+id/activity_sign_up_password_field" />

    <Button
        android:id="@+id/activity_sign_up_sign_in_button"
        style="@style/EmptyButton"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/activity_sign_up_repeat_password_field"
        android:layout_marginBottom="37dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/activity_sign_up_sign_up_button"
        style="@style/NormalButton"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:layout_alignBottom="@+id/activity_sign_up_sign_in_button"
        android:layout_alignEnd="@+id/activity_sign_up_repeat_password_field" />

</RelativeLayout>